--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/Chabivz/009-GoodReadMeGenerator#readme",
   "dependencies": {
-    "inquirer": "^8.0.0",
+    "inquirer": "^8.1.0",
     "node-fetch": "^2.6.1",
-    "prompts": "^2.4.1"
-  }
+    "prompts": "^2.4.1",
+    "util": "^0.12.4"
+  },
+  "devDependencies": {},
+  "keywords": []
 }
